src/elements/SectionTable/SectionTable.scss
@use 'igz-controls/scss/colors';
@use 'igz-controls/scss/borders';

.table-cell {
  &_big {
    flex: 1;
    min-width: 100px;
  }

  &_medium {
    flex: 0.7;
    min-width: 75px;
  }

  &_small {
    flex: 0.5;
    min-width: 50px;
  }
}

.section-table {
  min-width: fit-content;
  height: 100%;
  border: borders.$dividerBorder;
  border-radius: 8px;

  &__table {
    &-body {
      display: flex;
      flex: 1;
      flex-direction: column;
    }

    &-row {
      display: flex;
      flex: 1;
      flex-direction: row;
      border-bottom: borders.$tertiaryBorder;
    }

    &-link {
      min-width: 100%;
      max-width: 50px;
    }

    &-cell {
      display: flex;
      align-items: center;
      padding: 8px 5px 8px 0;
      color: colors.$primary;
      line-height: 24px;

      &.status {
        color: colors.$supernova;
        text-transform: none;

        &_completed,
        &_ready,
        &_running {
          color: colors.$java;
        }

        &-nuclio {
          &_ready {
            color: colors.$brightTurquoise;

            &.disabled {
              color: colors.$topaz;
            }
          }

          &_scaledToZero {
            color: colors.$topaz;
          }
        }

        &_failed,
        &_error,
        &_unhealthy {
          color: colors.$amaranth;
        }

        &_imported {
          color: colors.$topaz;
        }
      }

      .tooltip-wrapper {
        min-width: 8px;
        margin-right: 5px;
      }

      &.name-wrapper {
        display: flex;
        flex-wrap: wrap;

        &.table-cell_with-tag {
          gap: 4px;
          height: 57px;
        }

        .item-name {
          width: 100%;
        }

        .item-tag {
          display: inline;
          max-width: 150px;
          color: colors.$topaz;
          line-height: 16px;
        }
      }

      .table-body__cell {
        &_type {
          display: flex;
          align-items: center;
          padding: 0;
        }
      }

      &:first-child {
        padding-left: 15px;
      }
    }

    &-header {
      display: flex;
      flex: 1;
      font-size: 14px;
      line-height: 24px;
      border-bottom: borders.$tertiaryBorder;

      .table-header-item {
        color: colors.$topaz;
        font-weight: bold;
      }
    }

    .table-body__cell {
      align-items: center;
      border: none;
    }

    .tooltip__text {
      display: initial;
    }
  }
}

